--- a/data-science.html
+++ b/data-science.html
@@ -72,7 +72,7 @@
       
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/similarweb/jobs/1939308'>Job Application for Data Scientist at SimilarWeb</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/dathena/aebcbfa7-e591-470a-9440-d7f8561e0325'>Dathena - Data Scientist (Bangkok)</a></h5> 
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -177,11 +177,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
+<h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -217,7 +217,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -229,7 +229,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -253,7 +253,7 @@
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/4zsxmie7jafqhbwun3nwbwsfjy'>Data Scientist | Strategic Employment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/4zsxmie7jafqhbwun3nwbwsfjy'>Data Scientist | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Costa Mesa, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -307,13 +307,13 @@
 statistical methods, such as regression analysis and machine learning, to 
 address?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
+<h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... At SailPoint, you will work on the latest tools in Machine Learning, Big Data, 
 Cloud Computing, Graph Databases to solve challenging problems. This is a 
 paid?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -376,7 +376,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -415,7 +415,7 @@ data?...</p>
 <p>Oct 16, 2019 ... Our data science interns are considered full time employees by their peers--in 
 fact, you will be expected to contribute right away as a member of our Scrum?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://broadinstitute.wd1.myworkdayjobs.com/en-US/broad_institute/job/Cambridge-MA/Associate-Computational-Biologist--Data-Sciences-Platform_0215'>Associate Computational Biologist, Data Sciences Platform</a></h5> 
+<h5><a href='https://broadinstitute.wd1.myworkdayjobs.com/en-US/broad_institute/job/Cambridge-MA/Associate-Computational-Biologist--Data-Sciences-Platform_0215'>Associate Computational Biologist, Data Sciences Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 20, 2019 ... The life sciences are in the midst of a data revolution. Cheap and accurate 
 genome sequencing is a reality, high-resolution imaging is becoming routine, 
